# fx-backtester

./: .dockerignore  .env.demo.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.demo.yml  pyproject.toml  requirements.txt
config/: broker_guardrail_variants.usdjpy.yaml  data_quality.usdjpy.yaml  final_guardrail_bakeoff.usdjpy.yaml  strategy.usdjpy.fx_swing_trend_reclaim.fixed_004.yaml  strategy.usdjpy.fx_swing_trend_reclaim.yaml  weekend_policy_variants.usdjpy.yaml
docs/: fx_swing_trend_reclaim_v1.md
fx_backtester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: fetch_nasdaq_usdjpy_macro_calendar.py
src/: __init__.py  main.py
tests/: conftest.py  test_anchored_walk_forward.py  test_atr15_candidate_config.py  test_broker_distance_validator.py  test_config_overrides.py  test_csv_report.py  test_data_pipeline.py  test_execution_engine.py  test_execution_stress.py  test_fetch_nasdaq_usdjpy_macro_calendar.py  test_final_bakeoff_candidate_config.py  test_final_bakeoff_metrics.py  test_final_bakeoff_report.py  test_final_bakeoff_runner.py  test_final_bakeoff_scoring.py  test_final_strategy_config.py  test_fixed_stake_backtest_summary.py  test_fixed_stake_baseline_validator.py  test_fixed_stake_comparison.py  test_fixed_stake_config_integrity.py  test_fixed_stake_pnl_calculation.py  test_fixed_stake_position_sizing.py  test_fixed_stake_strategy_logic.py  test_fixed_stake_trade_log.py  test_fixed_stake_weekend_policy.py  test_forensics_execution_audit.py  test_forensics_r_multiple_audit.py  test_forensics_report.py  test_funding_model.py  (+46 more)
(+587 files in other folders)
