[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-backtester"
version = "0.1.0"
description = "Research-grade USDJPY tick backtester"
requires-python = ">=3.11"
dependencies = [
  "polars>=1.20",
  "pyarrow>=18",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "numpy>=2.0",
  "jinja2>=3.1",
  "plotly>=5.24",
  "lightstreamer-client-lib>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["src*"]
